<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.1.0</version>
  <description>Exercise 2 of ETH ROS Course.</description>
  <maintainer email="diegocdl@galileo.edu">Diego Calderon</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/diegocdl/husky_highlevel_controller</url>
  <url type="bugtracker">https://github.com/diegocdl/husky_highlevel_controller/issues</url>
  <author email="diegocdl@galileo.edu">Diego Calderon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
